--- a/setup.ipynb
+++ b/setup.ipynb
@@ -918,9 +918,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 180,
    "source": [
-    "state_mat = loc_map[['state_int', 'region_int', 'GDPcont_t0']].to_numpy()\n",
+    "state_mat = loc_map[['state_int', 'region_int', 'GDPcont_t0']].to_csv('location_sim_base.csv')\n",
     "# state_mat"
    ],
    "outputs": [],
@@ -1760,6 +1760,132 @@
      "execution_count": 90
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "source": [
+    "loc_map.groupby('Region').mean().sort_values('GDPcont_t0').region_int.to_frame().reset_index()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Region</th>\n",
+       "      <th>region_int</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Plains</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Great Lakes</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Southeast</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Southwest</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>New England</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Rocky Mountain</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Mideast</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Far West</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Region  region_int\n",
+       "0          Plains         7.0\n",
+       "1     Great Lakes         6.0\n",
+       "2       Southeast         0.0\n",
+       "3       Southwest         2.0\n",
+       "4     New England         4.0\n",
+       "5  Rocky Mountain         3.0\n",
+       "6         Mideast         5.0\n",
+       "7        Far West         1.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 166
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "source": [
+    "np.arange(0.01,.055, .005).size"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 178
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "source": [
+    "import init_db\n",
+    "init_db.init_db('results.sql')"
+   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
