--- a/setup.ipynb
+++ b/setup.ipynb
@@ -1086,6 +1086,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "source": [
+    "sim_mat[:10,:]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0.00000000e+00, 0.00000000e+00, 4.59724085e-01, 3.91935484e-02],\n",
+       "       [8.00000000e+00, 0.00000000e+00, 2.70722644e-01, 1.63548387e-01],\n",
+       "       [7.00000000e+00, 0.00000000e+00, 2.46542046e-01, 2.01129032e-01],\n",
+       "       [1.60000000e+01, 0.00000000e+00, 3.60455138e-01, 2.00967742e-01],\n",
+       "       [3.00000000e+00, 0.00000000e+00, 1.98178515e-01, 3.70967742e-01],\n",
+       "       [4.20000000e+01, 0.00000000e+00, 3.00590540e-01, 1.10483871e-01],\n",
+       "       [2.10000000e+01, 0.00000000e+00, 3.23054877e-01, 2.10161290e-01],\n",
+       "       [4.10000000e+01, 0.00000000e+00, 2.82431365e-01, 9.82258065e-02],\n",
+       "       [3.80000000e+01, 0.00000000e+00, 4.05565530e-01, 4.18225806e-01],\n",
+       "       [1.90000000e+01, 0.00000000e+00, 2.21023764e-01, 1.21129032e-01]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 186
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "source": [
     "import run_sim\n",
@@ -1170,20 +1206,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 188,
    "source": [
-    "target.flags['C_CONTIGUOUS']"
+    "import time\n",
+    "time.time()"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "True"
+       "1639126479.64135"
       ]
      },
      "metadata": {},
-     "execution_count": 68
+     "execution_count": 188
     }
    ],
    "metadata": {}
@@ -1604,95 +1641,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "source": [
-    "target[:,0].copy()"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([0.03919355, 0.16354839, 0.20112903, 0.20096774, 0.37096774,\n",
-       "       0.11048387, 0.21016129, 0.09822581, 0.41822581, 0.12112903,\n",
-       "       0.34072254, 0.46537034, 0.50313124, 0.50120921, 0.67197015,\n",
-       "       0.41064581, 0.50979743, 0.39777843, 0.71750449, 0.42173998,\n",
-       "       0.64007181, 0.76518626, 0.80391373, 0.80326114, 0.97501909,\n",
-       "       0.71184573, 0.81159736, 0.69872939, 1.01834696, 0.72418326,\n",
-       "       0.93997486, 1.0642082 , 1.10459134, 1.10185161, 1.27526361,\n",
-       "       1.01194649, 1.11226665, 0.99858858, 1.31862842, 1.02392029,\n",
-       "       1.24187721, 1.36464277, 1.40565912, 1.40182067, 1.57588087,\n",
-       "       1.31359077, 1.41133921, 1.29861523, 1.62117668, 1.32509912,\n",
-       "       3.5427628 , 1.66306835, 3.70479815, 3.7010641 , 3.87581033,\n",
-       "       1.61134278, 1.71081608, 3.59737343, 1.91961721, 1.62252088,\n",
-       "       3.84153689, 1.96002974, 4.0041794 , 3.99922359, 4.17452733,\n",
-       "       1.90879587, 2.01018407, 3.89471928, 2.21833748, 1.9206768 ,\n",
-       "       4.14176587, 2.26088911, 4.3044251 , 4.29801125, 4.47271677,\n",
-       "       2.20721989, 2.31027863, 4.19511335, 2.51887367, 2.22002626,\n",
-       "       4.4411495 , 2.56115558, 4.60237064, 4.59532991, 4.77135884,\n",
-       "       2.50704957, 2.60782295, 4.49559546, 2.81813926, 2.52104542,\n",
-       "       4.74070743, 2.86010465, 4.90160991, 4.89558001, 5.07285695,\n",
-       "       2.80641704, 2.90832978, 4.79464443, 3.11789539, 2.82126622,\n",
-       "       5.04009334, 3.15968655, 5.20121416, 5.19708634, 5.37295995,\n",
-       "       3.10527253, 3.20692876, 5.09507879, 3.41790066, 3.12236255])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 56
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 192,
    "source": [
     "import compute_OLS\n",
-    "w = compute_OLS.compute_OLS(data_out, target, 0)\n",
-    "# pd.DataFrame(w, columns=labels)\n"
+    "w = compute_OLS.compute_OLS(data_out, target, 5)\n",
+    "# pd.DataFrame(w, columns=labels)\n",
+    "w"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "/media/nick/Data/GitRepos/TreatmentBiasInvestigator/fit_model.py:79: NumbaPerformanceWarning: '@' is faster on contiguous arrays, called on (array(float64, 2d, A), array(float64, 2d, A))\n",
-      "  # return data_out\n",
-      "/media/nick/Data/GitRepos/TreatmentBiasInvestigator/fit_model.py:79: NumbaPerformanceWarning: '@' is faster on contiguous arrays, called on (array(float64, 2d, C), array(float64, 1d, A))\n",
-      "  # return data_out\n",
-      "/media/nick/Data/GitRepos/TreatmentBiasInvestigator/fit_model.py:79: NumbaPerformanceWarning: '@' is faster on contiguous arrays, called on (array(float64, 2d, F), array(float64, 2d, A))\n",
-      "  # return data_out\n",
-      "/media/nick/Data/GitRepos/TreatmentBiasInvestigator/fit_model.py:80: NumbaPerformanceWarning: '@' is faster on contiguous arrays, called on (array(float64, 2d, A), array(float64, 1d, C))\n",
-      "  # cc.compile()\n",
-      "/home/nick/miniconda3/envs/CAPP/lib/python3.9/site-packages/numba/core/typing/npydecl.py:965: NumbaPerformanceWarning: '@' is faster on contiguous arrays, called on (array(float64, 2d, A), array(float64, 2d, A))\n",
-      "  warnings.warn(NumbaPerformanceWarning(msg))\n",
-      "/home/nick/miniconda3/envs/CAPP/lib/python3.9/site-packages/numba/core/typing/npydecl.py:965: NumbaPerformanceWarning: '@' is faster on contiguous arrays, called on (array(float64, 2d, F), array(float64, 2d, A))\n",
-      "  warnings.warn(NumbaPerformanceWarning(msg))\n",
-      "/home/nick/miniconda3/envs/CAPP/lib/python3.9/site-packages/numba/core/typing/npydecl.py:965: NumbaPerformanceWarning: '@' is faster on contiguous arrays, called on (array(float64, 2d, C), array(float64, 1d, A))\n",
-      "  warnings.warn(NumbaPerformanceWarning(msg))\n",
-      "/home/nick/miniconda3/envs/CAPP/lib/python3.9/site-packages/numba/core/typing/npydecl.py:965: NumbaPerformanceWarning: '@' is faster on contiguous arrays, called on (array(float64, 2d, A), array(float64, 1d, C))\n",
-      "  warnings.warn(NumbaPerformanceWarning(msg))\n"
+      "[autoreload of fit_model failed: Traceback (most recent call last):\n",
+      "  File \"/home/nick/.local/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/nick/.local/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/home/nick/miniconda3/envs/CAPP/lib/python3.9/imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"/home/nick/miniconda3/envs/CAPP/lib/python3.9/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 613, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 790, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 228, in _call_with_frames_removed\n",
+      "  File \"/media/nick/Data/GitRepos/TreatmentBiasInvestigator/fit_model.py\", line 92, in <module>\n",
+      "    cc.compile()\n",
+      "  File \"/home/nick/miniconda3/envs/CAPP/lib/python3.9/site-packages/numba/core/compiler_lock.py\", line 35, in _acquire_compile_lock\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/home/nick/miniconda3/envs/CAPP/lib/python3.9/site-packages/numba/pycc/cc.py\", line 214, in compile\n",
+      "    objects, dll_exports = self._compile_object_files(build_dir)\n",
+      "numba.core.errors.TypingError: Failed in nopython mode pipeline (step: nopython frontend)\n",
+      "No implementation of function Function(<built-in function empty>) found for signature:\n",
+      " \n",
+      " >>> empty(Literal[int](2), int64)\n",
+      " \n",
+      "There are 4 candidate implementations:\n",
+      "      - Of which 2 did not match due to:\n",
+      "      Overload in function '_OverloadWrapper._build.<locals>.ol_generated': File: numba/core/overload_glue.py: Line 131.\n",
+      "        With argument(s): '(int64, int64)':\n",
+      "       Rejected as the implementation raised a specific error:\n",
+      "         TypingError: Failed in nopython mode pipeline (step: nopython frontend)\n",
+      "       No implementation of function Function(<intrinsic stub>) found for signature:\n",
+      "        \n",
+      "        >>> stub(int64, int64)\n",
+      "        \n",
+      "       There are 2 candidate implementations:\n",
+      "         - Of which 2 did not match due to:\n",
+      "         Intrinsic of function 'stub': File: numba/core/overload_glue.py: Line 35.\n",
+      "           With argument(s): '(int64, int64)':\n",
+      "          No match.\n",
+      "       \n",
+      "       During: resolving callee type: Function(<intrinsic stub>)\n",
+      "       During: typing of call at <string> (3)\n",
+      "       \n",
+      "       \n",
+      "       File \"<string>\", line 3:\n",
+      "       <source missing, REPL/exec in use?>\n",
+      "\n",
+      "  raised from /home/nick/miniconda3/envs/CAPP/lib/python3.9/site-packages/numba/core/typeinfer.py:1074\n",
+      "      - Of which 2 did not match due to:\n",
+      "      Overload in function '_OverloadWrapper._build.<locals>.ol_generated': File: numba/core/overload_glue.py: Line 131.\n",
+      "        With argument(s): '(Literal[int](2), int64)':\n",
+      "       Rejected as the implementation raised a specific error:\n",
+      "         TypingError: Failed in nopython mode pipeline (step: nopython frontend)\n",
+      "       No implementation of function Function(<intrinsic stub>) found for signature:\n",
+      "        \n",
+      "        >>> stub(Literal[int](2), int64)\n",
+      "        \n",
+      "       There are 2 candidate implementations:\n",
+      "         - Of which 2 did not match due to:\n",
+      "         Intrinsic of function 'stub': File: numba/core/overload_glue.py: Line 35.\n",
+      "           With argument(s): '(int64, int64)':\n",
+      "          No match.\n",
+      "       \n",
+      "       During: resolving callee type: Function(<intrinsic stub>)\n",
+      "       During: typing of call at <string> (3)\n",
+      "       \n",
+      "       \n",
+      "       File \"<string>\", line 3:\n",
+      "       <source missing, REPL/exec in use?>\n",
+      "\n",
+      "  raised from /home/nick/miniconda3/envs/CAPP/lib/python3.9/site-packages/numba/core/typeinfer.py:1074\n",
+      "\n",
+      "During: resolving callee type: Function(<built-in function empty>)\n",
+      "During: typing of call at /media/nick/Data/GitRepos/TreatmentBiasInvestigator/fit_model.py (82)\n",
+      "\n",
+      "\n",
+      "File \"fit_model.py\", line 82:\n",
+      "def compute_OLS(X, Y):\n",
+      "    <source elided>\n",
+      "\n",
+      "\n",
+      "]\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([ 0.04363488, -0.00438123,  0.29968708,  0.33266156,  0.16240814,\n",
-       "        0.12175347,  0.15871685,  0.08135288,  0.16937419,  0.37799809,\n",
-       "        0.05590984,  0.06876959,  2.00026815])"
+       "array([0.16937419, 0.37799809, 0.05590984, 0.06876959, 2.00026815])"
       ]
      },
      "metadata": {},
-     "execution_count": 72
+     "execution_count": 192
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 211,
    "source": [
+    "from numba import jit\n",
+    "@jit\n",
     "def compute_OLS(X, Y, treat_idx = 0):\n",
     "    n, k = X.shape\n",
     "    XTX = X.T @ X\n",
@@ -1700,16 +1762,20 @@
     "    est[0, :] = np.linalg.inv(XTX) @ X.T @ Y\n",
     "    y_hat = X @ est[0, :]\n",
     "    resid = y_hat - Y\n",
-    "    vcv = np.true_divide(1,(n-k)) *\\\n",
-    "        np.dot((resid.T @ resid), np.linalg.inv(XTX))\n",
-    "    # VCV = np.true_divide(1,n-k) * (resid.T @ resid) @ np.linalg.inv(XTX)\n",
-    "    est[1, :] = np.sqrt(np.diagonal(vcv))\n",
+    "    tst = (resid.T @ resid)\n",
+    "    tst2 = np.linalg.inv(XTX)\n",
+    "    tst * tst2\n",
+    "    vcv = np.true_divide(1,(n-k)) * (resid.T @ resid) * np.linalg.inv(XTX)\n",
+    "    # return vcv\n",
+    "    est2 = np.sqrt(np.diag(vcv))\n",
+    "    # est[1, :] = np.sqrt(np.diagonal(vcv))\n",
     "    if treat_idx == 0:\n",
     "        return est\n",
     "    else:\n",
     "        return est[:,-treat_idx:]\n",
     "tst = compute_OLS(data_out, target, treat_idx=1)\n",
-    "pd.DataFrame(tst)"
+    "pd.DataFrame(tst)\n",
+    "# np.diag(tst)"
    ],
    "outputs": [
     {
@@ -1740,24 +1806,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2.000268</td>\n",
+       "      <td>2.000268e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.000553</td>\n",
+       "      <td>-1.363116e+57</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          0\n",
-       "0  2.000268\n",
-       "1  0.000553"
+       "              0\n",
+       "0  2.000268e+00\n",
+       "1 -1.363116e+57"
       ]
      },
      "metadata": {},
-     "execution_count": 90
+     "execution_count": 211
     }
    ],
    "metadata": {}
